grid columns finished

--- a/index.html
+++ b/index.html
@@ -5,9 +5,189 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ecommerce website product cards</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <div class="container">
+        <div class="card">
+            <div class="imgBx">
+                <img src="assets/watch7.jpeg" alt="Omega
+                De Ville Prestige">
+            </div>
+            <div class="content">
+                <div class="productName">
+                    <h3>Omega
+                        De Ville Prestige</h3>
+                </div>
+                <div class="priceRating">
+                    <h4>$1300.00</h4>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="imgBx">
+                <img src="assets/watch1.jpeg" alt="Omega
+                De Ville Prestige">
+            </div>
+            <div class="content">
+                <div class="productName">
+                    <h3>Omega
+                        De Ville Prestige</h3>
+                </div>
+                <div class="priceRating">
+                    <h4>$1300.00</h4>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="imgBx">
+                <img src="assets/watch5.jpeg" alt="Omega
+                De Ville Prestige">
+            </div>
+            <div class="content">
+                <div class="productName">
+                    <h3>Cartier
+                        Ballon Bleu</h3>
+                </div>
+                <div class="priceRating">
+                    <h4>$13455.00</h4>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="imgBx">
+                <img src="assets/watch3.jpeg" alt="Omega
+                De Ville Prestige">
+            </div>
+            <div class="content">
+                <div class="productName">
+                    <h3>Panerai
+                        Radiomir Manual</h3>
+                </div>
+                <div class="priceRating">
+                    <h4>$23300.00</h4>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="imgBx">
+                <img src="assets/watch4.jpeg" alt="Omega
+                De Ville Prestige">
+            </div>
+            <div class="content">
+                <div class="productName">
+                    <h3>Audemars Piguet
+                        Royal Oak</h3>
+                </div>
+                <div class="priceRating">
+                    <h4>$54300.00</h4>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="imgBx">
+                <img src="assets/watch5.jpeg" alt="Omega
+                De Ville Prestige">
+            </div>
+            <div class="content">
+                <div class="productName">
+                    <h3>Hublot
+                        Big Bang</h3>
+                </div>
+                <div class="priceRating">
+                    <h4>$54900.00</h4>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="imgBx">
+                <img src="assets/watch6.jpeg" alt="Omega
+                De Ville Prestige">
+            </div>
+            <div class="content">
+                <div class="productName">
+                    <h3>Rolex
+                        Submariner</h3>
+                </div>
+                <div class="priceRating">
+                    <h4>$39900.00</h4>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="imgBx">
+                <img src="assets/watch7.jpeg" alt="Omega
+                De Ville Prestige">
+            </div>
+            <div class="content">
+                <div class="productName">
+                    <h3>Rolex
+                        Submariner</h3>
+                </div>
+                <div class="priceRating">
+                    <h4>$39900.00</h4>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     
 
     <script src="script.js"></script>
