--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star grey"></i>
                     </div>
                 </div>
             </div>
@@ -71,8 +71,8 @@
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star grey"></i>
+                        <i class="fa-solid fa-star grey"></i>
                     </div>
                 </div>
             </div>
@@ -94,7 +94,7 @@
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star grey"></i>
                     </div>
                 </div>
             </div>
@@ -114,9 +114,9 @@
                     <div class="rating">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star grey"></i>
+                        <i class="fa-solid fa-star grey"></i>
+                        <i class="fa-solid fa-star grey"></i>
                     </div>
                 </div>
             </div>
@@ -138,7 +138,7 @@
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star grey"></i>
                     </div>
                 </div>
             </div>
@@ -160,7 +160,7 @@
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star grey"></i>
                     </div>
                 </div>
             </div>
@@ -182,7 +182,7 @@
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star grey"></i>
                     </div>
                 </div>
             </div>
