--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
             <div class="imgBx">
                 <img src="assets/watch7.jpeg" alt="Omega
                 De Ville Prestige">
+                <ul class="action">
+                    <li style="--i:1;"><i class="fa-solid fa-heart-circle-check"></i><span> Add to wishlist</span></li>
+                    <li style="--i:2;"><i class="fa-solid fa-eye"></i><span> Add to card</span></li>
+                    <li style="--i:3;"><i class="fa-solid fa-cart-plus"></i><span> View details</span></li>
+                </ul>
             </div>
             <div class="content">
                 <div class="productName">
@@ -22,7 +27,7 @@
                         De Ville Prestige</h3>
                 </div>
                 <div class="priceRating">
-                    <h4>$1300.00</h4>
+                    <h4><sup>$</sup>1300.<small>00</small></h4>
                     <div class="rating">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -37,6 +42,11 @@
             <div class="imgBx">
                 <img src="assets/watch1.jpeg" alt="Omega
                 De Ville Prestige">
+                <ul class="action">
+                    <li style="--i:1;"><i class="fa-solid fa-heart-circle-check"></i><span> Add to wishlist</span></li>
+                    <li style="--i:2;"><i class="fa-solid fa-eye"></i><span> Add to card</span></li>
+                    <li style="--i:3;"><i class="fa-solid fa-cart-plus"></i><span> View details</span></li>
+                </ul>
             </div>
             <div class="content">
                 <div class="productName">
@@ -44,7 +54,7 @@
                         De Ville Prestige</h3>
                 </div>
                 <div class="priceRating">
-                    <h4>$1300.00</h4>
+                    <h4><sup>$</sup>1300.<small>00</small></h4>
                     <div class="rating">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -59,6 +69,11 @@
             <div class="imgBx">
                 <img src="assets/watch5.jpeg" alt="Omega
                 De Ville Prestige">
+                <ul class="action">
+                    <li style="--i:1;"><i class="fa-solid fa-heart-circle-check"></i><span> Add to wishlist</span></li>
+                    <li style="--i:2;"><i class="fa-solid fa-eye"></i><span> Add to card</span></li>
+                    <li style="--i:3;"><i class="fa-solid fa-cart-plus"></i><span> View details</span></li>
+                </ul>
             </div>
             <div class="content">
                 <div class="productName">
@@ -66,7 +81,7 @@
                         Ballon Bleu</h3>
                 </div>
                 <div class="priceRating">
-                    <h4>$13455.00</h4>
+                    <h4><sup>$</sup>13455.<small>00</small></h4>
                     <div class="rating">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -81,6 +96,11 @@
             <div class="imgBx">
                 <img src="assets/watch3.jpeg" alt="Omega
                 De Ville Prestige">
+                <ul class="action">
+                    <li style="--i:1;"><i class="fa-solid fa-heart-circle-check"></i><span> Add to wishlist</span></li>
+                    <li style="--i:2;"><i class="fa-solid fa-eye"></i><span> Add to card</span></li>
+                    <li style="--i:3;"><i class="fa-solid fa-cart-plus"></i><span> View details</span></li>
+                </ul>
             </div>
             <div class="content">
                 <div class="productName">
@@ -88,7 +108,7 @@
                         Radiomir Manual</h3>
                 </div>
                 <div class="priceRating">
-                    <h4>$23300.00</h4>
+                    <h4><sup>$</sup>23300.<small>00</small></h4>
                     <div class="rating">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -103,6 +123,11 @@
             <div class="imgBx">
                 <img src="assets/watch4.jpeg" alt="Omega
                 De Ville Prestige">
+                <ul class="action">
+                    <li style="--i:1;"><i class="fa-solid fa-heart-circle-check"></i><span> Add to wishlist</span></li>
+                    <li style="--i:2;"><i class="fa-solid fa-eye"></i><span> Add to card</span></li>
+                    <li style="--i:3;"><i class="fa-solid fa-cart-plus"></i><span> View details</span></li>
+                </ul>
             </div>
             <div class="content">
                 <div class="productName">
@@ -110,7 +135,7 @@
                         Royal Oak</h3>
                 </div>
                 <div class="priceRating">
-                    <h4>$54300.00</h4>
+                    <h4><sup>$</sup>54300.<small>00</small></h4>
                     <div class="rating">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -125,6 +150,11 @@
             <div class="imgBx">
                 <img src="assets/watch5.jpeg" alt="Omega
                 De Ville Prestige">
+                <ul class="action">
+                    <li style="--i:1;"><i class="fa-solid fa-heart-circle-check"></i><span> Add to wishlist</span></li>
+                    <li style="--i:2;"><i class="fa-solid fa-eye"></i><span> Add to card</span></li>
+                    <li style="--i:3;"><i class="fa-solid fa-cart-plus"></i><span> View details</span></li>
+                </ul>
             </div>
             <div class="content">
                 <div class="productName">
@@ -132,7 +162,7 @@
                         Big Bang</h3>
                 </div>
                 <div class="priceRating">
-                    <h4>$54900.00</h4>
+                    <h4><sup>$</sup>54900.<small>00</small></h4>
                     <div class="rating">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -147,6 +177,11 @@
             <div class="imgBx">
                 <img src="assets/watch6.jpeg" alt="Omega
                 De Ville Prestige">
+                <ul class="action">
+                    <li style="--i:1;"><i class="fa-solid fa-heart-circle-check"></i><span> Add to wishlist</span></li>
+                    <li style="--i:2;"><i class="fa-solid fa-eye"></i><span> Add to card</span></li>
+                    <li style="--i:3;"><i class="fa-solid fa-cart-plus"></i><span> View details</span></li>
+                </ul>
             </div>
             <div class="content">
                 <div class="productName">
@@ -154,7 +189,7 @@
                         Submariner</h3>
                 </div>
                 <div class="priceRating">
-                    <h4>$39900.00</h4>
+                    <h4><sup>$</sup>39900.<small>00</small></h4>
                     <div class="rating">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -169,6 +204,11 @@
             <div class="imgBx">
                 <img src="assets/watch7.jpeg" alt="Omega
                 De Ville Prestige">
+                <ul class="action">
+                    <li style="--i:1;"><i class="fa-solid fa-heart-circle-check"></i><span> Add to wishlist</span></li>
+                    <li style="--i:2;"><i class="fa-solid fa-eye"></i><span> Add to card</span></li>
+                    <li style="--i:3;"><i class="fa-solid fa-cart-plus"></i><span> View details</span></li>
+                </ul>
             </div>
             <div class="content">
                 <div class="productName">
@@ -176,7 +216,7 @@
                         Submariner</h3>
                 </div>
                 <div class="priceRating">
-                    <h4>$39900.00</h4>
+                    <h4><sup>$</sup>39900.<small>00</small></h4>
                     <div class="rating">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
